--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
     "screens": [
-        'cgweed',
-        'cgweed',
-        'cgweed',
-        'cgweed'
+        "cgweed",
+        "cgweed",
+        "cgweed",
+        "cgweed"
     ]
 }
